           * modified all program to integrate new client nod class;
           * created 2 new files for handling banned words and their list (naccio);
           * partly integrated into GUI;
           * Integrated xSocket library into DSHub : http://xsocket.sf.net , thanks BlackSonar for suggesting
           * this change completely modifies the access system, the threading and thread pool system;
           * removed client queue class;
           * modified other classes to integrate xSocket;
           * some things like timeouts, or i dont know what, might not work, please report. 
           * xSocket doesnt work , reverted.
           * the chat control GUI works now ( naccio);
           * all thats' left is the maqin functionality with msg class;
           * implemented MINA as a library http://mina.apache.org having a test on it;
           * SVN is UNSTABLE, need to retest everything;
           * from now on, mina and slf4j log4j libraries are mandatory for working;
           * testframe main page modifications, removed xsocket license.
           * minor updates on MINA integration;
           * accounts work again;
           * more fixes;
           * Client Assassin is enabled;
           * SVN testable;
           * fixed kicking and dropping;
           * fixed double motd on restart ( will be deprecated when cronlike jobs will be added );
           * fixed restarting;
           * fixed client assassin;
           * enabled Chat Control.
           * added a browse window to chat control ( naccio );
           * fixed error message when address in use;
           * added some status messages for chat control;
           * added a message box that specifies if added regex is invalid ( on chat control ) ( naccio );
           * created new file ChatControlCmd for a new command via client;
           * made framework for new command's integration;